--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis,
       perferendis!
     </p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
   </body>
 </html>
