changed this to that

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     </p>
 
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis,
-      perferendis!
+      Lets change this to that
     </p>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
